my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "my-ingress"
    namespace: default
    annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
spec:
    rules:
    - http:
        paths:
          - path: /foods
            pathType: Prefix
            backend:
              service:
                name: "foods-svc"
                port:
                  number: 80
          - path: /sales
            pathType: Prefix
            backend:
              service:
                name: "sales-svc"
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "home-svc"
                port:
                  number: 80
